<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Hotel Reservation</string>
    <string name="check_in">Check-In</string>
    <string name="check_out">Check-Out</string>
    <string name="childs">Childs</string>
    <string name="room_type">Room Type</string>
    <string name="silver">Silver</string>
    <string name="platinum">Platinum</string>
    <string name="bronze">Bronze</string>
    <string name="paradise_hotel">Paradise Hotel</string>
    <string name="full_name">Full Name:</string>
    <string name="submit">Submit</string>
    <string name="address">Address</string>
    <string name="book_now">Book Now</string>
    <string name="rooms">Rooms</string>
    <string name="facilities">Facilities</string>
    <string name="gallery">Gallery</string>
    <string name="payment">Payment</string>
    <string name="contact_us">Contact Us</string>
    <string name="reservation">Reservation</string>
    <string name="galle_road_colombo_003">Galle,Road Colombo 003</string>
    <string name="cntact_no">Cntact No:</string>
    <string name="user_login">User Login</string>
    <string name="admin_login">Admin Login</string>
    <string name="reception_2">Reception 2</string>
    <string name="make_reservation">Make Reservation</string>
    <string name="_0771265341">+0771265341</string>
    <string name="_0712076543">+0712076543</string>
    <string name="sam_gmail_com">sam@gmail.com</string>
    <string name="reception_1">Reception 1</string>
    <string name="piyal_gmail_com">piyal@gmail.com</string>
    <string name="your_message">Your Message:</string>
    <string name="hotel">HOTEL</string>
    <string name="add">Add</string>
    <string name="bronze_package">Bronze Package</string>
    <string name="check_availability">check availability</string>
    <string name="platinum_package">Platinum Package</string>
    <string name="silver_package">Silver Package</string>
    <string name="check_avialability">check avialability</string>
    <string name="gold_package">Gold Package</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="paradise">PARADISE</string>
    <string name="view_message">View Message</string>
    <string name="Welcome">Welcome</string>
    <string name="contonues">Contonues</string>
    <string name="Card_number">Card_Number</string>
    <string name="Register">Register</string>
    <string name="Start">Start</string>
    <string name="setup_you_re_payment">Setup you\'re Payment</string>
    <string name="get_start">Get Start</string>
    <string name="you_are_a_member">You are a member?</string>
    <string name="register">Register</string>
    <string name="your_are_not_member">Your are not member?</string>
    <string name="fill_your_payment_details">Fill Your Payment Details</string>
    <string name="nice_to_see_you_again">Nice to see you Again!</string>
    <string name="need_help">Need Help?</string>
    <string name="proceed_payment">Proceed Payment</string>
    <string name="name">Name</string>
    <string name="show">SHOW</string>
    <string name="nic">NIC</string>
    <string name="checkout">CheckOut</string>

    <string name="contactnumber">ContactNumber</string>
    <string name="checkin">CheckIn</string>
    <string name="Rates">Rates</string>
    <string name="top">There is Only One Boss.The Guest</string>
    <string name="Location">Location</string>
    <string name="button55">*</string>
    <string name="register_id">Register ID</string>
    <string name="ex_date1">Ex Date</string>
    <string name="card_number1">Card Number</string>
    <string name="welcome_to_paradise_hotel1">Welcome To Paradise Hotel</string>
    <string name="experitation_date1">Experitation Date</string>
    <string name="change_your_details1">Change Your Details</string>
    <string name="registration_id1">Registration ID</string>
    <string name="cvc1">CVC</string>
    <string name="card_number">Card number</string>
    <string name="name1">Name</string>
    <string name="you_are_a_new_member">newmem</string>
    <string name="enjoy_our_service">enjoy our service</string>
    <string name="you_ate_a_new_member">you ate a new member?</string>
    <string name="your_are_a_new_member">your are a new_member</string>
    <string name="your_are_a">your_are_a_new_member?</string>


</resources>
