<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundhome"
    tools:context=".contactus1">


    <TextView
        android:id="@+id/textView"
        android:layout_width="262dp"
        android:layout_height="62dp"
        android:fontFamily="sans-serif-black"
        android:layout_marginStart="85dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/contact_us"
        android:textColor="#8B1FF8"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/contactName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#070707"
        android:textColorHighlight="#3F51B5"
        android:textColorHint="#990A0A0A"
        android:textColorLink="#673AB7"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/contactEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/contactEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#1A1919"
        android:textColorHighlight="#3F51B5"
        android:textColorHint="#990A0A0A"
        android:textColorLink="#673AB7"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/contactPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactName" />

    <EditText
        android:id="@+id/contactPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="Phone"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#0F0E0E"
        android:textColorHint="#99070707"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactEmail" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/your_message"
        android:textColor="#FA141313"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/contactMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactPhone" />

    <EditText
        android:id="@+id/contactMessage"
        android:layout_width="390dp"
        android:layout_height="104dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="type your message here"
        android:inputType="textPersonName"
        android:textColorHint="#99050505"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button"
        android:layout_width="162dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button"
        android:onClick="sendData"
        android:text="@string/submit"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactMessage" />


</androidx.constraintlayout.widget.ConstraintLayout>